--- a/taskr.css
+++ b/taskr.css
@@ -1,12 +1,19 @@
 .with-validation {
   position: relative;
 }
+
 .list-group-item .float-right {
   visibility: hidden;
 }
+
 .list-group-item:hover .float-right {
   visibility: visible;
 }
+
+.id {
+  display: none;
+}
+
 i {
   cursor: pointer;
 }
